[tool.poetry]
name = "vss365today-admin"
version = "0.1.0"
description = "Administration control panel for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^1.1.4"
Flask-WTF = "^1.1.1"
gunicorn = "^20.1.0"
WTForms-Components = "^0.10.5"
webargs = "^8.2.0"
passlib = "^1.7.4"
sys-vars = "^5.0.0"
httpx = "^0.24.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
# black = "^23.1"
mypy = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
