[tool.poetry]
name = "vss365today-admin"
version = "0.1.0"
description = "Administration control panel for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
gunicorn = "^20.1.0"
sys-vars = "^5.0.0"
httpx = "^0.24.1"
wtforms-components = "^0.10.5"
webargs = "^8.2.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
flask-sqlalchemy = "^3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
preview = true
